setup folder project

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -9,6 +9,7 @@
   a,
   p {
     font-size: 1.6rem;
+    letter-spacing: -0.32px;
   }
 
   &__center {
@@ -27,6 +28,7 @@
     a,
     p {
       font-size: 1.4rem;
+      letter-spacing: 0;
     }
 
     &__left {
