--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,10 +10,6 @@
   padding: 25px 30px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  //   display: flex;
-  //   flex-direction: row;
-  //   flex-wrap: nowrap;
-  //   justify-content: space-between;
   align-items: baseline;
 
   @include maxW(1023px) {
@@ -25,10 +21,12 @@
   &__left {
     h1 {
       font-size: 2.4rem;
+      letter-spacing: -0.72px;
       font-weight: 400;
 
       @include maxW(1023px) {
         font-size: 2.3rem;
+        letter-spacing: -0.23px;
       }
     }
   }
@@ -39,6 +37,7 @@
     gap: 5px;
 
     font-size: 1.9rem;
+    letter-spacing: -0.38px;
     text-transform: uppercase;
 
     @include maxW(1023px) {
@@ -51,6 +50,7 @@
     justify-content: flex-end;
     text-transform: uppercase;
     font-size: 1.9rem;
+    letter-spacing: -0.38px;
 
     label {
       pointer-events: none;
@@ -109,6 +109,7 @@
 
     @include maxW(1023px) {
       font-size: 1.6rem;
+      letter-spacing: -0.16px;
 
       span {
         margin-right: 10px;
@@ -143,7 +144,7 @@
     @include maxW(1023px) {
       display: flex;
       flex-direction: column;
-      padding: 18px;
+      padding: 15px 18px;
 
       position: fixed;
       top: 0;
@@ -169,6 +170,7 @@
         padding-top: 200px;
         text-transform: uppercase;
         font-size: 2.4rem;
+        letter-spacing: -0.24px;
 
         a {
           margin-bottom: 10px;
@@ -182,7 +184,7 @@
         }
 
         .carbon {
-          margin-bottom: 5px;
+          margin-bottom: 6px;
         }
 
         .carbon,
