--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -13,7 +13,7 @@
     font-weight: 500;
     vertical-align: top;
 
-    border-right: 1px solid rgb(87 129 26 / 30%);
+    border-right: 1px solid;
   }
 
   &__sub {
