--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -39,12 +39,15 @@
 // ======== Intro
 .intro {
   &__container {
-    min-height: 100vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 50px;
     align-items: center;
     padding: 120px 25px;
+
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
 
     @include maxW(1023px) {
       grid-template-columns: repeat(1, 1fr);
@@ -56,6 +59,8 @@
   &__left,
   &__right {
     margin: 0 auto;
+    overflow: hidden;
+    position: relative;
   }
 
   &__left {
@@ -70,6 +75,15 @@
         height: 318.65px;
       }
     }
+  }
+
+  .panel {
+    height: 100vh;
+    width: 100%;
+    margin-left: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   &__right {
@@ -94,7 +108,7 @@
     }
 
     .bottom {
-      margin-top: 50px;
+      height: 100vh;
       max-width: 500px;
 
       p {
