--- a/src/styles/imports/_layouts.scss
+++ b/src/styles/imports/_layouts.scss
@@ -22,7 +22,7 @@ body {
   margin: auto;
   background-color: var(--main-bg-cl);
   color: var(--main-text-cl);
-  font-family: var(--sans-serif-fonts);
+  font-family: var(--jp-fonts);
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1;
