--- a/src/styles/imports/_variables.scss
+++ b/src/styles/imports/_variables.scss
@@ -5,7 +5,7 @@
   --main-text-cl: #a3a18b;
   --opacity: 0.3;
 
-  --serif-fonts: 'Times New Roman', serif;
+  --times-fonts: 'Times New Roman', serif;
   --sans-serif-fonts: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   --jp-fonts: 'Helvetica Neue', Helvetica, Arial, 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN',
     Meiryo, sans-serif;
