setup scss folder homepage

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,393 +1,7 @@
 @import 'src/styles/imports/mixins';
 
-// ======== FRIST VIEW
-.firstview {
-  height: 100vh;
-  position: relative;
-
-  &__container {
-    position: absolute;
-    bottom: 25px;
-  }
-
-  &__heading {
-    padding: 0 18px;
-
-    h2 {
-      font-family: var(--times-fonts);
-      font-size: 4.4rem;
-      font-weight: 400;
-      text-align: center;
-      letter-spacing: -1.32px;
-      line-height: 1.1;
-    }
-  }
-
-  @include maxW(1023px) {
-    &__heading {
-      bottom: 18px;
-
-      h2 {
-        font-size: 2.8rem;
-        letter-spacing: -0.56px;
-        text-align: left;
-      }
-    }
-  }
-}
-
-// ======== Intro
-.intro {
-  margin-bottom: 150px;
-
-  &__container {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-
-    position: relative;
-    width: 100%;
-    height: 100vh;
-
-    @include maxW(1023px) {
-      display: block;
-      gap: unset;
-    }
-  }
-
-  &__left,
-  &__right {
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-
-  &__left {
-  }
-
-  &__omoty {
-    margin: 0 auto;
-
-    path,
-    rect {
-      fill: var(--main-text-cl);
-    }
-
-    @include maxW(1023px) {
-      svg {
-        width: 364px;
-        height: 318.65px;
-      }
-    }
-  }
-
-  &__right {
-    h2 {
-      font-size: 3.4rem;
-      font-weight: 400;
-      letter-spacing: -1.36px;
-      margin-bottom: 25px;
-    }
-
-    .panel {
-      width: 100%;
-      height: 100vh;
-      position: absolute;
-      top: 0;
-      left: 0;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    // .fake {
-    //   height: 5vh;
-    // }
-
-    .top {
-      p {
-        font-size: 1.8rem;
-        letter-spacing: -1.08px;
-        font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-
-        span {
-          font-size: 1.9rem;
-          letter-spacing: 0;
-        }
-      }
-    }
-
-    .bottom {
-      max-width: 500px;
-
-      p {
-        font-size: 1.6rem;
-        letter-spacing: -0.96px;
-        font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-
-        span {
-          font-size: 1.7rem;
-          letter-spacing: 0;
-        }
-      }
-    }
-
-    @include maxW(1023px) {
-      text-align: center;
-      margin-top: 130px;
-
-      h2 {
-        font-size: 2.6rem;
-        letter-spacing: -0.52px;
-        margin-bottom: 10px;
-      }
-
-      .top {
-        p {
-          font-size: 1.5rem;
-          letter-spacing: -0.9px;
-
-          span {
-            font-size: 1.6rem;
-          }
-        }
-      }
-
-      .bottom {
-        max-width: 100%;
-
-        p {
-          font-size: 1.4rem;
-          letter-spacing: -0.84px;
-
-          span {
-            font-size: 1.5rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-// ======== Projects
-.projects {
-  &__container {
-    padding: 30px;
-
-    h2 {
-      font-size: 2.1rem;
-      font-weight: 400;
-      letter-spacing: -0.42px;
-      text-transform: uppercase;
-      margin-bottom: 20px;
-    }
-
-    @include maxW(1023px) {
-      padding: 18px;
-
-      h2 {
-        font-size: 1.9rem;
-        letter-spacing: -0.19px;
-        margin-bottom: 15px;
-      }
-    }
-  }
-
-  &__showcase {
-    width: 100%;
-    height: 690px;
-    position: relative;
-
-    .items {
-      width: 100%;
-      height: 100%;
-      background-color: var(--main-text-cl);
-      opacity: var(--opacity);
-    }
-
-    p {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-
-      font-size: 1.8rem;
-      letter-spacing: -0.36px;
-    }
-
-    @include maxW(1023px) {
-      height: 567px;
-
-      p {
-        font-size: 1.6rem;
-        letter-spacing: -0.16px;
-      }
-    }
-  }
-}
-
-// ======== Philosophy
-.philosophy {
-  &__container {
-    margin-top: 250px;
-    padding: 0 30px;
-    display: flex;
-    gap: 80px;
-  }
-
-  &__left {
-    width: 60.87%;
-    overflow: hidden;
-    position: sticky;
-    top: 60px;
-    left: 0;
-    height: 100%;
-
-    h2 {
-      position: absolute;
-      top: 0;
-      font-size: 2.1rem;
-      font-weight: 400;
-      letter-spacing: -0.42px;
-    }
-
-    p {
-      position: absolute;
-      bottom: -5px;
-      font-size: 3rem;
-      letter-spacing: -0.6px;
-    }
-  }
-
-  &__right {
-    flex: 1;
-  }
-
-  &__bg {
-    position: relative;
-
-    svg {
-      width: 100%;
-      // height: calc(100vh - 153px);
-      height: 100%;
-      display: block;
-
-      path,
-      rect {
-        fill: currentColor;
-      }
-    }
-  }
-
-  &__top {
-    display: flex;
-    justify-content: space-between;
-    gap: 50px;
-    margin-bottom: 110px;
-
-    h2 {
-      font-size: 3.4rem;
-      font-weight: 400;
-      letter-spacing: -1.36px;
-      line-height: 1.1;
-    }
-
-    p {
-      font-size: 1.8rem;
-      font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-      letter-spacing: -3px;
-    }
-
-    .vertical {
-      writing-mode: vertical-rl;
-      text-orientation: mixed;
-      display: flex;
-      align-items: center;
-      gap: 15px;
-    }
-
-    .line {
-      width: 1px;
-      height: 25px;
-      background-color: currentColor;
-    }
-  }
-
-  &__mid {
-    margin-bottom: 130px;
-
-    p {
-      font-size: 1.6rem;
-      line-height: 1.5;
-      margin-bottom: 35px;
-      letter-spacing: -0.96px;
-      font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-    }
-  }
-
-  &__bot {
-    p {
-      font-size: 1.7rem;
-      line-height: 1.5;
-      letter-spacing: -0.34px;
-      margin-bottom: 35px;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-}
-
-// ======== Company
-.company {
-  &__container {
-    margin-top: 250px;
-    padding: 0 30px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 80px;
-  }
-
-  &__left {
-    h2 {
-      margin-bottom: 30px;
-      font-size: 2.1rem;
-      letter-spacing: -0.42px;
-      line-height: 1.2;
-      font-weight: 400;
-    }
-  }
-
-  &__lang {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    font-family: var(--times-fonts);
-
-    p,
-    span {
-      cursor: pointer;
-      font-size: 1.7rem;
-      opacity: 0.3;
-      transition: 0.15s linear;
-      text-transform: uppercase;
-
-      &.active {
-        opacity: 1;
-      }
-    }
-  }
-
-  &__mission {
-    // display: none;
-
-    // &.active {
-    //   display: block;
-    // }
-  }
-}
+@import './styles/firstview';
+@import './styles/intro';
+@import './styles/projects';
+@import './styles/philosophy';
+@import './styles/company';
