--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -66,15 +66,11 @@
       justify-content: center;
     }
 
-    // .fake {
-    //   height: 5vh;
-    // }
-
     .top {
       p {
+        // font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
         font-size: 1.8rem;
         letter-spacing: -1.08px;
-        font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
 
         span {
           font-size: 1.9rem;
@@ -87,9 +83,9 @@
       max-width: 500px;
 
       p {
+        // font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
         font-size: 1.6rem;
         letter-spacing: -0.96px;
-        font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
 
         span {
           font-size: 1.7rem;
