--- a/src/pages/Home/styles/_projects.scss
+++ b/src/pages/Home/styles/_projects.scss
@@ -1,7 +1,7 @@
 // ======== Projects
 .projects {
   &__container {
-    padding: 30px;
+    padding: 60px 30px;
 
     h2 {
       font-size: 2.1rem;
@@ -12,7 +12,7 @@
     }
 
     @include maxW(1023px) {
-      padding: 18px;
+      padding: 50px 18px 0;
 
       h2 {
         font-size: 1.9rem;
