--- a/src/pages/Home/styles/_intro.scss
+++ b/src/pages/Home/styles/_intro.scss
@@ -1,6 +1,6 @@
 // ======== Intro
 .intro {
-  margin-bottom: 150px;
+  margin-bottom: 50px;
 
   &__container {
     display: flex;
@@ -33,6 +33,13 @@
   &__omoty {
     margin: 0 auto;
 
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+
+    &.is-active {
+      opacity: 1;
+    }
+
     path,
     rect {
       fill: var(--main-text-cl);
@@ -64,6 +71,13 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+
+      opacity: 0;
+      transition: opacity 0.2s ease-in-out;
+
+      &.is-active {
+        opacity: 1;
+      }
     }
 
     .top {
