--- a/src/pages/Home/styles/_projects.scss
+++ b/src/pages/Home/styles/_projects.scss
@@ -1,7 +1,7 @@
 // ======== Projects
 .projects {
   &__container {
-    padding: 60px 30px;
+    padding: 60px 30px 0;
 
     h2 {
       font-size: 2.1rem;
