--- a/src/pages/Home/styles/_company.scss
+++ b/src/pages/Home/styles/_company.scss
@@ -1,8 +1,8 @@
 // ======== Company
 .company {
   &__container {
-    margin: 220px 0;
-    padding: 0 30px;
+    margin: 200px auto;
+    padding: 60px 30px 0;
     display: grid;
     grid-template-columns: 21.5% 1fr 1fr;
     gap: 80px;
