update something css

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,12 +23,12 @@
   &__left {
     h1 {
       font-size: 2.4rem;
-      letter-spacing: -0.72px;
+      // letter-spacing: -0.72px;
       font-weight: 400;
 
       @include maxW(1023px) {
         font-size: 2.3rem;
-        letter-spacing: -0.23px;
+        // letter-spacing: -0.23px;
       }
     }
   }
@@ -39,7 +39,7 @@
     gap: 5px;
 
     font-size: 1.9rem;
-    letter-spacing: -0.38px;
+    // letter-spacing: -0.38px;
     text-transform: uppercase;
 
     @include maxW(1023px) {
@@ -52,7 +52,7 @@
     justify-content: flex-end;
     text-transform: uppercase;
     font-size: 1.9rem;
-    letter-spacing: -0.38px;
+    // letter-spacing: -0.38px;
 
     label {
       pointer-events: none;
@@ -111,7 +111,7 @@
 
     @include maxW(1023px) {
       font-size: 1.6rem;
-      letter-spacing: -0.16px;
+      // letter-spacing: -0.16px;
 
       span {
         margin-right: 10px;
@@ -173,7 +173,7 @@
         padding-top: 200px;
         text-transform: uppercase;
         font-size: 2.4rem;
-        letter-spacing: -0.24px;
+        // letter-spacing: -0.24px;
 
         a {
           margin-bottom: 10px;
