--- a/src/pages/Home/styles/_company.scss
+++ b/src/pages/Home/styles/_company.scss
@@ -19,7 +19,7 @@
     h2 {
       margin-bottom: 30px;
       font-size: 2.1rem;
-      letter-spacing: -0.42px;
+      // letter-spacing: -0.42px;
       line-height: 1.2;
       font-weight: 400;
     }
@@ -30,7 +30,7 @@
       h2 {
         margin-bottom: 15px;
         font-size: 1.8rem;
-        letter-spacing: -0.18px;
+        // letter-spacing: -0.18px;
       }
     }
   }
@@ -65,7 +65,7 @@
   &__text {
     font-size: 1.6rem;
     font-weight: 400;
-    letter-spacing: -0.32px;
+    // letter-spacing: -0.32px;
     line-height: 1.5;
     margin-bottom: 30px;
 
@@ -86,7 +86,7 @@
     a {
       font-size: 1.5rem;
       line-height: 1.7;
-      letter-spacing: -0.45px;
+      // letter-spacing: -0.45px;
     }
 
     a {
