--- a/src/pages/Home/styles/_philosophy.scss
+++ b/src/pages/Home/styles/_philosophy.scss
@@ -26,7 +26,7 @@
       top: 0;
       font-size: 2.1rem;
       font-weight: 400;
-      letter-spacing: -0.42px;
+      // letter-spacing: -0.42px;
       z-index: 10;
     }
 
@@ -37,7 +37,7 @@
 
       h2 {
         font-size: 1.9rem;
-        letter-spacing: -0.19px;
+        // letter-spacing: -0.19px;
       }
     }
   }
@@ -56,12 +56,12 @@
     bottom: 0;
     left: 0;
     font-size: 3rem;
-    letter-spacing: -0.6px;
+    // letter-spacing: -0.6px;
 
     @include maxW(1023px) {
       position: initial;
       font-size: 2.4rem;
-      letter-spacing: -0.24px;
+      // letter-spacing: -0.24px;
     }
   }
 
@@ -97,14 +97,13 @@
     h2 {
       font-size: 3.4rem;
       font-weight: 400;
-      letter-spacing: -1.36px;
+      // letter-spacing: -1.36px;
       line-height: 1.1;
     }
 
     p {
-      // font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
       font-size: 1.8rem;
-      letter-spacing: -3px;
+      // letter-spacing: -3px;
     }
 
     .vertical {
@@ -127,12 +126,12 @@
 
       h2 {
         font-size: 2.8rem;
-        letter-spacing: -1.12px;
+        // letter-spacing: -1.12px;
       }
 
       p {
         font-size: 1.5rem;
-        letter-spacing: -0.9px;
+        // letter-spacing: -0.9px;
       }
 
       .vertical {
@@ -149,11 +148,10 @@
     margin-bottom: 130px;
 
     p {
-      // font-family: 'Yu Gothic', YuGothic, 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
       font-size: 1.6rem;
       line-height: 1.5;
       margin-bottom: 35px;
-      letter-spacing: -0.96px;
+      // letter-spacing: -0.96px;
     }
 
     @include maxW(1023px) {
@@ -161,7 +159,7 @@
 
       p {
         font-size: 1.4rem;
-        letter-spacing: -0.84px;
+        // letter-spacing: -0.84px;
         margin-bottom: 30px;
       }
     }
@@ -171,7 +169,7 @@
     p {
       font-size: 1.7rem;
       line-height: 1.5;
-      letter-spacing: -0.34px;
+      // letter-spacing: -0.34px;
       margin-bottom: 35px;
 
       &:last-child {
