--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -85,7 +85,7 @@
     transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     font-size: 1.4rem;
     line-height: 1.6;
-    letter-spacing: -0.42px;
+    // letter-spacing: -0.42px;
 
     span {
       font-size: 1.5rem;
