--- a/src/pages/Home/styles/_company.scss
+++ b/src/pages/Home/styles/_company.scss
@@ -1,7 +1,7 @@
 // ======== Company
 .company {
   &__container {
-    margin: 200px auto;
+    margin: 200px auto 150px;
     padding: 60px 30px 0;
     display: grid;
     grid-template-columns: 21.5% 1fr 1fr;
