--- a/src/pages/Home/styles/_firstview.scss
+++ b/src/pages/Home/styles/_firstview.scss
@@ -35,6 +35,10 @@
         font-size: 2.8rem;
         text-align: left;
       }
+
+      span {
+        font-size: 2.4rem;
+      }
     }
   }
 }
